# olscorer

./: Cargo.toml  README.md
olscorer_cli/: Cargo.toml
olscorer_cli/src/: main.rs
olscorer_core/: Cargo.toml
olscorer_core/src/: audio_utils.rs  errors.rs  pitch_detection.rs  transcription.rs
olscorer_gui/: Cargo.toml  tauri.conf.json
olscorer_gui/icons/: icon.icns
olscorer_gui/src/: main.rs
olscorer_gui/ui/: index.html  script.js  styles.css
resources/test/: README.md
src/: audio_utils.rs  errors.rs  lib.rs  pitch_detection.rs  transcription.rs  wav_utils.rs
src/olscorer_cli/: main.rs
