[package]
name = "olscorer"
version = "0.1.0"
edition = "2021"
authors = ["Oleg Tretieu"]
description = "An automatic music transcription program"
license = "GPL-3.0-or-later"
publish = false

[[bin]]
name = "olscorer-cli"
path = "src/olscorer-cli/main.rs"

[dependencies]
# CLI
clap = {version = "4.3", features = ["derive"]}
