[package]
name = "olscorer"
version = "0.1.0"
edition = "2021"
authors = ["Oleg Tretieu"]
description = "An automatic music transcription program"
license = "GPL-3.0-or-later"
default-run = "olscorer"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["dialog-message", "dialog-open", "dialog-save", "fs-write-file", "window-set-cursor-icon"] }
olscorer_core = { path = "../olscorer_core" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
